# InfinityLibrary

./: .gitignore  README.md  docker-compose.yaml  service-account-base64  testJira.txt
.github/workflow/: server-cd.yml
.github/workflows/: client-cd.yaml  client-ci.yaml  server-cd.yml  server-ci.yml
client/: .eslintrc.json  .gitignore  App.tsx  Tabs.tsx  app.json  eas.json  env.ts  package-lock.json  package.json
client/client/: .eslintrc.json  .gitignore  .prettierrc.json  App.tsx  Tabs.tsx  app.json  declarations.d.ts  package.json
client/context/: AuthenticateContext.tsx
client/screens/: DetailsScreen.tsx  (+1 more)
kubernetes/: ingress-service.yaml  postgres-deployment.yaml  server-cluster-ip-service.yaml  server-deployment.yaml
server/: .coveragerc  .flake8  Dockerfile  Dockerfile.dev  pyproject.toml
server/migrations/: env.py
server/migrations/versions/: 1f8cba905ac8_create_votes_table.py  bc9631d43b5a_add_book.py  c6ddfdefeba8_create_user_table.py  d88ecf95888e_change_owner_to_user_id.py
server/server/: main.py
server/server/api/: dependencies.py
server/server/api/v1/: __init__.py  apiv1.py
server/server/api/v1/router/: __init__.py  book.py  user.py  vote.py
server/server/core/db/: database.py
server/server/core/models/: __init__.py  address.py  book.py  user.py  vote.py
server/server/core/schemas/: __init__.py  address.py  book.py  user.py  vote.py
server/server/crud/: __init__.py  base.py  book.py  user.py  vote.py
server/server/utils/: __init__.py  book.py  user.py
server/tests/: test_main.py
server/tests/api/: test_user.py
(+38 files in other folders)
