[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Toan Tran <thetopoftheworld19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
fastapi = "^0.85.1"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"
alembic = "^1.8.1"
psycopg2 = "^2.9.5"
python = "3.10.8"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
preview = true
include = '\.pyi?$'
